--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -76,18 +76,18 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: ls
+      run: cd AKS && terraform init -upgrade
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: cd /AKS && terraform fmt -check AKS/
+      run: cd AKS && terraform fmt -check
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: cd /AKS && terraform plan -input=false AKS/
+      run: cd AKS && terraform plan -input=false
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: cd /AKS && Terraform Apply AKS/
-      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+   # - name: cd /AKS && Terraform Apply AKS/
+   #   if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+    #  run: terraform apply -auto-approve -input=false
