--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,6 +73,8 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+    - name: az login
+      run: az login --service-principal -u $USERNAME -p $PASSOWRD --tenant $TENANT
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
