--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -74,7 +74,10 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
     - name: az login
-      run: echo ${{ secrets.PASSWORD }}
+      run: echo ${{ env.TENANT }}
+      
+    - name: az login2
+      run: echo ${{ env.USERNAME }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
