--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -75,11 +75,10 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        
     - name: az login
-      run: echo ${{ env.TENANT }}
-      
-    - name: az login2
-      run: echo ${{ env.USERNAME }}
+      run: az login --service-principal -u ${{ env.USERNAME }} -p ${{ secrets.PASSWORD }} --tenant ${{ env.TENANT }}
+
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
