enable pipeline to run on all branches

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,10 +44,10 @@
 
 name: 'Terraform'
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
+# on:
+  # push:
+    # branches: [ "main" ]
+  # pull_request:
 env:
   USERNAME: cf94d20e-f1a8-49c2-87e8-ec4d575c96d2
   TENANT: 59db3cb4-ec5d-42b5-9c11-579561ca8d78
