job name change

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -116,7 +116,7 @@ jobs:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'kubectl'
     runs-on: ubuntu-latest
     environment: production
     defaults:
