commented out supposed invalid yaml

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -129,7 +129,7 @@ jobs:
   
     - name: install kubectl
       uses: actions/download-artifact@v3
-        with:
-          name: kubeconfig
+        # with:
+          # name: kubeconfig
       run: curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
   
