--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -102,14 +102,17 @@ jobs:
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
       run: cd AKS && terraform apply -var="ssh_public_key=${{ secrets.ID_RSA_PUB }}" -var="aks_service_principal_app_id=${{ secrets.AKS_SERVICE_PRINCIPAL_APP_ID }}" -var="aks_service_principal_client_secret=${{ secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET }}" -auto-approve -input=false
 
-    - name: Kubectl Config
-      uses: actions/upload-artifact@v3
-      with:
-          name: kubeconfig
-          path: ./azurek8s
-          retention-days: 1
+    - name: kubectl config generate
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
       run: echo "$(terraform output kube_config)" > ./azurek8s
+
+    - name: kubectl config save
+      uses: actions/upload-artifact@v3
+      with:
+        name: kubeconfig
+        path: ./azurek8s
+        retention-days: 1
+
 
   kubectl:
     name: 'kubectl'
