--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -116,6 +116,7 @@ jobs:
 
   kubectl:
     name: 'kubectl'
+    needs: terraform
     runs-on: ubuntu-latest
     environment: production
     defaults:
