--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -67,8 +67,8 @@ jobs:
 
     steps:
     # # Checkout the repository to the GitHub Actions runner
-    # - name: Checkout
-      # uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
@@ -124,8 +124,8 @@ jobs:
         shell: bash
     steps:
     # # Checkout the repository t
-    # - name: Checkout
-      # uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
   
     - name: download artifact
       uses: actions/download-artifact@v3
