--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,6 +47,8 @@ name: 'Terraform'
 on:
   push:
     branches: [ "*" ]
+    paths:
+      - 'AKS/**'
   pull_request:
 env:
   USERNAME: cf94d20e-f1a8-49c2-87e8-ec4d575c96d2
