--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -105,17 +105,17 @@ jobs:
       if: ${{ github.ref == 'refs/heads/main' }}
       run: cd AKS && terraform apply -var="ssh_public_key=${{ secrets.ID_RSA_PUB }}" -var="aks_service_principal_app_id=${{ secrets.AKS_SERVICE_PRINCIPAL_APP_ID }}" -var="aks_service_principal_client_secret=${{ secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET }}" -auto-approve -input=false
 
-    - name: kubectl config generate
-      if: ${{ github.ref == 'refs/heads/main' }}
-      run: echo "$(terraform output kube_config)" > ./azurek8s
+    # - name: kubectl config generate
+      # if: ${{ github.ref == 'refs/heads/main' }}
+      # run: echo "$(terraform output kube_config)" > ./azurek8s
 
-    - name: kubectl config save
-      if: ${{ github.ref == 'refs/heads/main' }}
-      uses: actions/upload-artifact@v3
-      with:
-        name: kubeconfig
-        path: ./azurek8s
-        retention-days: 1
+    # - name: kubectl config save
+      # if: ${{ github.ref == 'refs/heads/main' }}
+      # uses: actions/upload-artifact@v3
+      # with:
+        # name: kubeconfig
+        # path: ./azurek8s
+        # retention-days: 1
 
 
   kubectl:
@@ -131,10 +131,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
   
-    - name: download artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: kubeconfig
+    # - name: download artifact
+      # uses: actions/download-artifact@v3
+      # with:
+        # name: kubeconfig
 
     - name: install kubectl
       run: curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
@@ -146,13 +146,13 @@ jobs:
       run: az aks get-credentials --resource-group rg-close-sunfish --name rama
     
     
-    - name: check config
-      run: cat ./azurek8s && export KUBECONFIG=./azurek8s
+    # - name: check config
+      # run: cat ./azurek8s && export KUBECONFIG=./azurek8s
 
     - name: test config
       run: kubectl get nodes
 
-    - name: install consul
+    - name: install helm
       run: |
         curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
         sudo apt-get install apt-transport-https --yes
