--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -161,5 +161,8 @@ jobs:
         sudo apt-get install helm -y
 
     - name: install consul
-      run: helm install consul hashicorp/consul
+      run: |
+        helm repo add hashicorp https://helm.releases.hashicorp.com
+        helm install consul hashicorp/consul -f 
+        
   
