--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -143,7 +143,7 @@ jobs:
       run: az login --service-principal -u ${{ env.USERNAME }} -p ${{ secrets.PASSWORD }} --tenant ${{ env.TENANT }}
 
     - name: apply kubectl config
-      run: az aks get-credentials --resource-group rg-close-sunfish --name rama
+      run: az aks get-credentials --resource-group rg-rama --name rama
     
     
     # - name: check config
